# emdash

./: .emdash.json  .eslintrc.json  .gitignore  .notes  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  BROWSER_ANNOTATIONS_DESIGN.md  BROWSER_ANNOTATIONS_GOAL.md  CLAUDE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  LICENSE.md  PLANNING.md  PR_DESCRIPTION.md  README.md  TEST-AUTO-UPDATE.md  components.json  conductor.json  design.md  dev-app-update.canary.yml  dev-app-update.yml  docker-compose.yaml  drizzle.config.ts  electron-builder.base.ts  electron-builder.canary.config.ts  electron-builder.config.ts  electron-builder.fork.config.ts  electron.vite.config.ts  eslint.config.ts  flake.nix  handoff-zenflow-orchestration.md  implementation.md  knip.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  (+10 more)
.claude/: settings.local.json
.emdash/: .planlock.json  planning.md
.github/: PULL_REQUEST_TEMPLATE.md
.playwright-cli/: page-2026-02-28T00-06-56-881Z.yml
.storybook/: main.ts  preview.tsx
agents/: README.md  quickstart.md
docs/: .gitignore  .writing-guide.md  BROWSER_PREVIEW_ARCHITECTURE.md  BROWSER_PREVIEW_TESTING.md  README.md  acp-chat-ui.md  auto-updater-testing.md  browser-verification.md  browser.md  design.md  goal.md  mcp-internal-spec.md  package-lock.json  package.json  pnpm-lock.yaml  sidebar-folders-plan.md  source.config.ts  ssh-architecture.md  ssh-setup.md  telemetry.md  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  voice-input-research.md
drizzle/: 0000_cuddly_scarecrow.sql  0000_initial.sql  0000_initial_schema.sql  0000_loose_kylun.sql  0000_majestic_inertia.sql  0000_mean_wither.sql  0001_abandoned_titania.sql  0001_add_base_ref_to_projects.sql  0001_add_project_owner_created_by.sql  0001_add_unique_projects_path.sql  0001_big_loners.sql  0001_misty_micromax.sql  (+88 more)
src-tauri/: .gitignore  Cargo.toml  allowed-commands.json  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  bindings_parser.rs  greeting.rs  lib.rs  main.rs  shell_env.rs  tauri_bindings.rs
src-tauri/src/commands/: greet.rs  mod.rs  path.rs  pty.rs  secrets.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/pty/: coalesce.rs  mod.rs  registry.rs  session.rs  types.rs
src-tauri/src/secrets/: aead.rs  master_key.rs  mod.rs  service.rs
src-tauri/tests/: domain_boundaries.rs  pty_session.rs  wire_format.rs
src-tauri/tests/snapshots/: wire_format__bindings_ts.snap  wire_format__get_path_request_args.snap  wire_format__get_path_response_type.snap  wire_format__get_secret_request_args.snap  wire_format__greet_empty_name.snap  wire_format__greet_request_args.snap  wire_format__greet_response_world.snap  wire_format__greet_whitespace_name.snap  wire_format__pty_error_not_found.snap  wire_format__pty_kill_request_args.snap  wire_format__pty_resize_request_args.snap  wire_format__pty_spawn_request_args.snap  wire_format__pty_write_request_args.snap  wire_format__secrets_error_envelope.snap  wire_format__set_secret_request_args.snap
src-tauri/ui/: index.html  package.json  tsconfig.json  vite.config.ts
src-tauri/ui/src/: App.tsx  bindings.ts  main.tsx  styles.css
src-tauri/ui/src/components/: DebugShell.tsx
(+9105 files in other folders)
