[package]
name = "emdash-dev"
version = "0.1.0"
description = "Tauri 2 + Rust rewrite of emdash, shipped as a separate dev product alongside Electron emdash."
authors = ["Emdash Contributors <support@emdash.sh>"]
license = "Apache-2.0"
repository = "https://github.com/Legacynnn/emdash"
edition = "2021"
rust-version = "1.77"
default-run = "emdash-dev"

[lib]
name = "emdash_dev"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "emdash-dev"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.1", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "=2.11.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.25"
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

[dev-dependencies]
insta = { version = "1.47", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
